- password is now masked - removed double slash